--- a/src/assets/scss/pages/_home.scss
+++ b/src/assets/scss/pages/_home.scss
@@ -1,490 +1,132 @@
 .home-main-slider {
-    margin-top: 40px;
-    margin-bottom: 40px;
+    padding-top: 40px;
 
-    &__block {
-        display: flex;
-        justify-content: space-between;
-        gap: 20px;
-        margin-top: 25px;
+    &__block {}
 
-        @include mobile {
-            flex-direction: column;
-        }
+    &__slide {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
     }
 
-    &__card {
-        border-radius: 20px;
-        border: 1px solid transparent;
-        background: linear-gradient(91deg, #2B2823 0%, #27251F 63.74%, #2C2A27 101.17%);
-        padding: 25px;
-        transition: 200ms ease;
-        height: 228px;
-        border-radius: 20px;
-        border: 1px solid #55473E;
-        box-shadow: 0px 4px 70.6px 0px rgba(0, 0, 0, 0.25);
-        position: relative;
+    &__main {
+        border-radius: 10px;
+        border: 1px solid #36332D;
+        background: linear-gradient(0deg, rgba(22, 21, 19, 0.92) 0%, rgba(22, 21, 19, 0.92) 100%);
+        backdrop-filter: blur(2.8499999046325684px);
+        padding: 20px 30px;
+        overflow: hidden;
+        height: 382px;
 
-        &_name {
-            font-size: 20px;
-            text-transform: uppercase;
-            font-weight: 700;
-            color: white;
-            line-height: 1;
-        }
-
-        &_title {
-            font-size: 46px;
-            font-weight: 700;
-            -webkit-text-stroke-width: 0.5px;
-            -moz-text-stroke-width: 0.5px;
-            -webkit-text-stroke-color: white;
-            -moz-text-stroke-color: white;
-            color: transparent;
-            line-height: 1.1;
-            margin-bottom: 8px;
-            font-family: $font-roboto;
-            transition: 300ms ease;
-        }
-
-        &_btn {
-            border-radius: 24.5px;
-            border: 1px solid #55473E;
-            background: #1A1916;
-            box-shadow: 0px 4px 70.6px 0px rgba(0, 0, 0, 0.25);
-            text-align: center;
-            font-size: 16px;
-            color: $text-dark;
-            font-weight: 700;
-            line-height: 1;
-            padding: 13px;
-        }
-
-        &_bg {
-            width: 100%;
-            height: 100%;
-            position: absolute;
-            top: 0;
-            left: 0;
-            border-radius: 20px;
-            opacity: 0.4;
-            overflow: hidden;
+        &_category {
+            font-size: 14px;
             display: flex;
-        }
+            align-items: center;
+            gap: 12px;
+            position: relative;
 
-        &:hover {
-            border: 1px solid $orange;
-            box-shadow: 0px 4px 70.6px 0px #FF6C3D40;
-
-            .home-main-slider__card_title {
-                color: $orange;
-                -webkit-text-stroke-width: 0px;
-                -moz-text-stroke-width: 0px;
+            svg {
+                height: 27px;
             }
 
-            .home-main-slider__card_bg {
-                opacity: 1;
+            &._pc {
+                color: #7892D8;
+
+                &::after {
+                    content: "";
+                    position: absolute;
+                    width: 50px;
+                    height: 50px;
+                    z-index: -1;
+                    left: -10px;
+                    bottom: -10px;
+                    filter: blur(30px);
+                    background-color: #7892D8;
+                    border-radius: 50%;
+                }
             }
-        }
-    }
-
-    &__steam {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        width: 40%;
-        max-width: 410px;
-
-        @include netbook {}
-
-        @include mobile {
-            width: 100%;
-            max-width: 100%;
         }
 
         &_img {
-            width: 100%;
-            max-width: 170px;
-            height: 100%;
+            position: relative;
+            left: -30px;
+            width: calc(100% + 60px);
+            height: 240px;
+        }
+
+        &_block {
             display: flex;
-            position: relative;
-
-            &_item {
-                width: 100%;
-                min-width: 190px;
-                height: auto;
-                position: absolute;
-                left: -40px;
-                top: 5px;
-                filter: grayscale(0.6);
-                transition: 200ms ease;
-                object-fit: contain;
-            }
-        }
-
-        &_content {
-            width: 100%;
-            max-width: 150px;
-            text-align: center;
-            position: relative;
-            z-index: 2;
-        }
-
-        &:hover {
-            .home-main-slider__steam_img_item {
-                filter: grayscale(0);
-            }
-        }
-    }
-
-    &__gamegift {
-        text-align: center;
-        max-width: 510px;
-        width: 40%;
-        padding: 0;
-        display: flex;
-        align-items: center;
-        flex-direction: column;
-        justify-content: center;
-
-        @include mobile {
-            width: 100%;
-            max-width: 100%;
-        }
-
-        &_title {
-            padding: 20px 20px 10px;
-            position: relative;
-            z-index: 2;
-        }
-    }
-
-    &__topup {
-        width: 40%;
-        max-width: 300px;
-        border-radius: 20px;
-        border: 1px solid #55473E;
-        background: linear-gradient(91deg, #2B2823 0%, #27251F 63.74%, #2C2A27 101.17%);
-        box-shadow: 0px 4px 70.6px 0px rgba(0, 0, 0, 0.25);
-        padding: 8px;
-        position: relative;
-
-        @include mobile {
-            width: 100%;
-            max-width: 100%;
-        }
-
-        &_volume {
-            position: absolute;
-            z-index: -1;
-            right: -5px;
-            width: 10px;
-            height: 48px;
-            border-radius: 13px;
-            border: 1px solid #55473E;
-            background: linear-gradient(91deg, #2B2823 0%, #27251F 63.74%, #2C2A27 101.17%);
-            top: 40px;
-
-            &:nth-child(2) {
-                top: 100px;
-            }
-        }
-
-        &_border {
-            width: 100%;
-            height: 100%;
-            border-radius: 13px;
-            border: 1px solid #55473E;
-            background: var(--DARK-BG, #1C1B19);
-            display: flex;
-            align-items: flex-end;
-            justify-content: center;
-            padding: 15px;
-        }
-
-        &_shape {
-            position: absolute;
-            top: 20px;
-            left: 50%;
-            transform: translateX(-50%);
-            width: 100px;
-            height: 10px;
-            border-radius: 13px;
-            border: 1px solid #55473E;
-            background: linear-gradient(91deg, #2B2823 0%, #27251F 63.74%, #2C2A27 101.17%);
-        }
-
-        .splide__arrows {
-            width: 100%;
-            position: absolute;
-            bottom: 0px;
-        }
-
-    }
-}
-
-.hot-slider {
-
-
-    &__item {
-        display: flex;
-        gap: 20px;
-        border-radius: 20px;
-        overflow: hidden;
-        background: linear-gradient(30deg, rgba(255, 108, 61, 0.00) 88.9%, rgba(255, 108, 61, 0.19) 101.47%), #161513;
-
-        @include mobile {
-            flex-direction: column;
-            gap: 5px;
-            background: linear-gradient(120deg, rgba(255, 108, 61, 0.00) 88.9%, rgba(255, 108, 61, 0.19) 101.47%), #161513;
-        }
-
-
-    }
-
-    &__img {
-        width: 100%;
-        max-width: 400px;
-        border-radius: 20px 0px 0px 20px;
-        border-bottom: 1px solid #2C2C2A;
-        display: flex;
-        position: relative;
-
-        @include mobile {
-            max-width: 100%;
-        }
-
-        &_over {
-            position: absolute;
-            left: 0;
-            top: 0;
-            width: 150%;
-            max-width: 570px;
-            height: 100%;
-            background: linear-gradient(90deg, rgba(0, 0, 0, 0.00) 0%, #161513 100%);
-
-            @include mobile {
-                display: none;
-            }
-        }
-
-        &_item {
-            width: 150%;
-            max-width: 550px;
-            object-fit: cover;
-
-            @include mobile {
-                max-width: 100%;
-                width: 100%;
-                height: 134px;
-                border-radius: 10px;
-            }
-        }
-    }
-
-    &__content {
-        width: 100%;
-        max-width: 545px;
-        position: relative;
-        padding: 15px;
-        display: flex;
-        flex-direction: column;
-        gap: 12px;
-
-        @include mobile {
-            padding: 10px;
-        }
-    }
-
-    &__action {
-        width: 100%;
-        max-width: 150px;
-        display: flex;
-        flex-direction: column;
-        align-items: flex-end;
-        margin-left: auto;
-        padding: 11px 14px;
-    }
-
-    &__title {
-        display: flex;
-        align-items: center;
-        gap: 50px;
-
-        &_text {
-            font-size: 24px;
-            font-weight: bold;
-        }
-
-        @include mobile {
+            align-items: flex-start;
             justify-content: space-between;
-            gap: 10px;
+            position: relative;
+            z-index: 2;
+        }
+
+        &_more {
+            padding: 13px 38px;
+            font-size: 15px;
+            font-weight: 600;
+        }
+
+        &_cards {
+            display: grid;
+            grid-template-columns: 133px 133px;
+            position: relative;
+            top: -120px;
+            gap: 15px;
+        }
+
+        &_card {
+            border-radius: 10px;
+            border: 5px solid #201E1B;
+            background: url(<path-to-image>) lightgray 50% / cover no-repeat;
+            box-shadow: 0px 4px 11.3px 0px rgba(0, 0, 0, 0.25);
+            position: relative;
+
+            &_img {
+                object-fit: cover;
+                height: 158px;
+                border-radius: 5px;
+            }
+
+            &_content {
+                position: absolute;
+                width: 100%;
+                height: 100%;
+                top: 0;
+                left: 0;
+            }
+
+            &_dis {
+                font-size: 28px;
+                text-shadow: rgb(32, 30, 27) 5px 0px 0px, rgb(32, 30, 27) 4.90033px 0.993347px 0px, rgb(32, 30, 27) 4.60531px 1.94709px 0px, rgb(32, 30, 27) 4.12668px 2.82321px 0px, rgb(32, 30, 27) 3.48353px 3.58678px 0px, rgb(32, 30, 27) 2.70151px 4.20736px 0px, rgb(32, 30, 27) 1.81179px 4.6602px 0px, rgb(32, 30, 27) 0.849836px 4.92725px 0px, rgb(32, 30, 27) -0.145998px 4.99787px 0px, rgb(32, 30, 27) -1.13601px 4.86924px 0px, rgb(32, 30, 27) -2.08073px 4.54649px 0px, rgb(32, 30, 27) -2.94251px 4.04248px 0px, rgb(32, 30, 27) -3.68697px 3.37732px 0px, rgb(32, 30, 27) -4.28444px 2.57751px 0px, rgb(32, 30, 27) -4.71111px 1.67494px 0px, rgb(32, 30, 27) -4.94996px 0.7056px 0px, rgb(32, 30, 27) -4.99147px -0.291871px 0px, rgb(32, 30, 27) -4.83399px -1.27771px 0px, rgb(32, 30, 27) -4.48379px -2.2126px 0px, rgb(32, 30, 27) -3.95484px -3.05929px 0px, rgb(32, 30, 27) -3.26822px -3.78401px 0px, rgb(32, 30, 27) -2.4513px -4.35788px 0px, rgb(32, 30, 27) -1.53666px -4.75801px 0px, rgb(32, 30, 27) -0.560763px -4.96845px 0px, rgb(32, 30, 27) 0.437495px -4.98082px 0px, rgb(32, 30, 27) 1.41831px -4.79462px 0px, rgb(32, 30, 27) 2.34258px -4.41727px 0px, rgb(32, 30, 27) 3.17346px -3.86382px 0px, rgb(32, 30, 27) 3.87783px -3.15633px 0px, rgb(32, 30, 27) 4.4276px -2.32301px 0px, rgb(32, 30, 27) 4.80085px -1.39708px 0px, rgb(32, 30, 27) 4.98271px -0.415447px 0px;
+                color: #FFF;
+                font-family: $font-roboto;
+                font-weight: 900;
+                position: absolute;
+
+                &._top-left {
+                    top: 0px;
+                    left: -30px;
+                }
+
+                &._right-bottom {
+                    right: -20px;
+                    bottom: 0px;
+                }
+            }
+
+            &_buy {
+                position: absolute;
+                bottom: 6px;
+                left: 6px;
+                width: 26px;
+                height: 26px;
+                display: flex;
+            }
         }
     }
 
-    &__info {
-        display: flex;
-        align-items: center;
-        gap: 20px;
-
-        @include mobile {
-            flex-wrap: wrap;
-            gap: 5px 20px;
-        }
-
-        &_item {
-            display: flex;
-            align-items: center;
-            font-size: 12px;
-            gap: 5px;
-        }
-
-        &_title {
-            color: $text-dark;
-        }
-
-        &_text {
-            color: white;
-        }
-    }
-
-    &__text {
-        font-size: 12px;
-        color: $text-dark;
-        display: -webkit-box;
-        -webkit-line-clamp: 2;
-        -webkit-box-orient: vertical;
-        overflow: hidden;
-        text-overflow: ellipsis;
-
-        @include mobile {
-            -webkit-line-clamp: 3;
-        }
-    }
-
-    &__price {
-        font-family: $font-roboto;
-        font-size: 24px;
-        color: $orange;
-        font-weight: bold;
-        line-height: 1.1;
-    }
-
-    &__discount {
-        font-size: 12px;
-        color: white;
-        font-family: $font-roboto;
-    }
-
-    &__price {}
-
-    .splide__pagination {
-        left: inherit;
-
-        @include mobile {
-            left: 0;
-            right: inherit;
-        }
-    }
-
-    .splide__pagination__page {
-        background: linear-gradient(0deg, #33322F 0%, #33322F 100%), #847F7D;
-        width: 9px;
-        height: 9px;
-    }
-
-    .splide__pagination__page.is-active {
-        transform: scale(1);
-        width: 20px;
-        border-radius: 20px;
-        background: $orange;
-        opacity: 1;
-    }
-}
-
-.gift-slider {
-    width: 100%;
-
-    &__item {
-        display: flex;
-        border-radius: 10px;
-        border: 1px solid #53463D;
-        overflow: hidden;
-    }
-
-    &__img {
-        width: 100px;
-        height: 60px;
-        object-fit: cover;
-    }
-}
-
-.topup-slider {
-    margin: 12px;
-    width: 100%;
-
-    &__item {
-        border-radius: 18px;
-        display: flex;
-        overflow: hidden;
-        width: 65px;
-        height: 65px;
-    }
-
-    &__img {
-        object-fit: cover;
-    }
-
-    &__content {
-        text-align: center;
-        line-height: 1;
-        margin-top: 20px;
-        opacity: 0;
-        display: flex;
-        flex-direction: column;
-        gap: 4px;
-    }
-
-    &__title {
-        font-size: 16px;
-        text-transform: uppercase;
-        font-weight: 700;
-    }
-
-    &__subtitle {
-        font-size: 12px;
-        color: $orange;
-    }
-
-    .splide__slide {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: column;
-        position: relative;
-        max-width: 180px;
-        color: white;
-
-        @include mobile {
-            max-width: 220px;
-        }
-
-        .topup-slider__item {
-            width: 82px;
-            height: 82px;
-            transform: scale(0.75);
-        }
-    }
-
-    .splide__slide.is-active {
-        .topup-slider__item {
-            transform: scale(1);
-        }
-
-        .topup-slider__content {
-            opacity: 1;
-        }
-    }
+    &__block {}
 }
 
 .home-swiper {
