--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -14,6 +14,7 @@
 @import "common/fonts";
 @import "common/preloader";
 @import "common/buttons";
+@import "common/cards";
 @import "common/form";
 @import "common/sliders";
 @import "template";
