--- a/src/assets/scss/pages/_home.scss
+++ b/src/assets/scss/pages/_home.scss
@@ -6,6 +6,7 @@
     &__slide {
         display: grid;
         grid-template-columns: 1fr 1fr;
+        gap: 20px;
     }
 
     &__main {
@@ -15,7 +16,6 @@
         backdrop-filter: blur(2.8499999046325684px);
         padding: 20px 30px;
         overflow: hidden;
-        height: 382px;
 
         &_category {
             font-size: 14px;
@@ -47,18 +47,19 @@
         }
 
         &_img {
-            position: relative;
-            left: -30px;
-            width: calc(100% + 60px);
+            position: absolute;
+            left: 0;
+            width: 100%;
             height: 240px;
         }
 
         &_block {
             display: flex;
-            align-items: flex-start;
+            align-items: flex-end;
             justify-content: space-between;
             position: relative;
             z-index: 2;
+            margin-top: 120px;
         }
 
         &_more {
@@ -70,8 +71,6 @@
         &_cards {
             display: grid;
             grid-template-columns: 133px 133px;
-            position: relative;
-            top: -120px;
             gap: 15px;
         }
 
@@ -126,7 +125,11 @@
         }
     }
 
-    &__block {}
+    &__secondary {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 18px;
+    }
 }
 
 .home-swiper {
