--- a/src/assets/scss/pages/_home.scss
+++ b/src/assets/scss/pages/_home.scss
@@ -17,6 +17,39 @@
         padding: 20px 30px;
         overflow: hidden;
 
+        &_bg {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            left: 0;
+            top: 0;
+
+            &_img {
+                position: absolute;
+                left: 0;
+                top: 0;
+                width: 100%;
+                height: 100%;
+                z-index: 1;
+            }
+
+            &_over {
+                background: linear-gradient(0deg, rgba(22, 21, 19, 0.92) 0%, rgba(22, 21, 19, 0.92) 100%);
+                backdrop-filter: blur(2.8499999046325684px);
+                z-index: 2;
+                position: absolute;
+                width: 100%;
+                height: 100%;
+                left: 0;
+                top: 0;
+            }
+        }
+
+        &_content {
+            position: relative;
+            z-index: 2;
+        }
+
         &_category {
             font-size: 14px;
             display: flex;
@@ -48,8 +81,8 @@
 
         &_img {
             position: absolute;
-            left: 0;
-            width: 100%;
+            left: -30px;
+            width: calc(100% + 60px);
             height: 240px;
         }
 
