--- a/src/assets/scss/common/_cards.scss
+++ b/src/assets/scss/common/_cards.scss
@@ -454,6 +454,7 @@
             width: 100%;
             height: 100%;
             z-index: 1;
+            object-fit: cover;
         }
 
         &_over {
