--- a/src/assets/scss/pages/_home.scss
+++ b/src/assets/scss/pages/_home.scss
@@ -13,9 +13,9 @@
         border-radius: 10px;
         border: 1px solid #36332D;
         background: linear-gradient(0deg, rgba(22, 21, 19, 0.92) 0%, rgba(22, 21, 19, 0.92) 100%);
-        backdrop-filter: blur(2.8499999046325684px);
         padding: 20px 30px;
         overflow: hidden;
+        position: relative;
 
         &_bg {
             position: absolute;
@@ -31,11 +31,10 @@
                 width: 100%;
                 height: 100%;
                 z-index: 1;
+                object-fit: cover;
             }
 
             &_over {
-                background: linear-gradient(0deg, rgba(22, 21, 19, 0.92) 0%, rgba(22, 21, 19, 0.92) 100%);
-                backdrop-filter: blur(2.8499999046325684px);
                 z-index: 2;
                 position: absolute;
                 width: 100%;
