--- a/src/assets/scss/pages/_basket.scss
+++ b/src/assets/scss/pages/_basket.scss
@@ -773,3 +773,130 @@
         }
     }
 }
+
+.basket-steps {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 9;
+    background: rgba(16, 15, 14, 0.78);
+    backdrop-filter: blur(24.850000381469727px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 200px 0;
+
+    &__bg {}
+
+    &__content {
+        width: 100%;
+        max-width: 826px;
+        border-radius: 10px;
+        border: 1px solid #2F2D2B;
+        background: #1A1917;
+        overflow: hidden;
+    }
+
+    &__header {
+        padding: 15px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        border-bottom: 1px solid #141413;
+
+        &_title {
+            font-size: 16px;
+            color: $text-dark;
+        }
+    }
+
+    &__close {
+        border-radius: 5px;
+        background: #2E2D2B;
+        width: 30px;
+        height: 30px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    &__cards {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr) minmax(140px, 179px);
+        gap: 50px 20px;
+        padding: 24px 24px 50px;
+        border-top: 1px solid #22221F;
+        border-bottom: 1px solid #141413;
+    }
+
+    &__card {
+        display: flex;
+        flex-direction: column;
+        position: relative;
+
+        &_img {
+            border-radius: 10px;
+            height: 110px;
+            object-fit: cover;
+        }
+
+        &_price {
+            font-weight: 600;
+            color: $text-dark;
+            position: absolute;
+            bottom: -30px;
+        }
+
+        &_more {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            padding: 15px;
+            border-radius: 10px;
+            background: #282725;
+
+            &_count {
+                font-weight: 600;
+                font-size: 20px;
+                color: white;
+            }
+
+            &_content {
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+                gap: 5px;
+            }
+
+            &_price {
+                display: flex;
+                flex-direction: column;
+                line-height: 1.1;
+                gap: 3px;
+
+                ._title {
+                    font-size: 12px;
+                    font-weight: 400;
+                    color: white;
+                }
+
+                ._price {
+                    font-size: 16px;
+                    font-weight: 600;
+                    color: $orange;
+                }
+            }
+
+            &_button {
+                padding: 0;
+            }
+        }
+    }
+
+    &__body {
+        padding: 20px 24px;
+        border-top: 1px solid #22221F;
+    }
+}
