--- a/src/assets/scss/_classes.scss
+++ b/src/assets/scss/_classes.scss
@@ -113,96 +113,75 @@
 }
 
 .accordion {
-    border-radius: 8px;
-    border: 1px solid #55473E;
-    background: linear-gradient(91deg, #2B2823 0%, #27251F 63.74%, #2C2A27 101.17%);
-    box-shadow: 0px 4px 70.6px 0px rgba(0, 0, 0, 0.25);
+    border-radius: 6px;
+    border: 1px solid #34312D;
+    background: #1C1B19;
+    transition: 200ms ease;
+
+    &:hover {
+        border: 1px solid $orange;
+    }
 
     &__intro {
         position: relative;
         color: $text-dark;
-        font-size: 20px;
-        font-weight: 700;
+        border-radius: 5px;
+        font-size: 16px;
+        font-weight: 400;
         cursor: pointer;
-        padding: 15px 20px 15px 25px;
+        padding: 6px;
         display: flex;
         align-items: center;
         justify-content: space-between;
         border: 1px solid transparent;
         transition: 200ms ease;
 
-        &:hover {
-            border: 1px solid $orange;
-        }
-
         &_icon {
-            width: 38px;
-            height: 28px;
+            min-width: 34px;
+            width: 34px;
+            height: 34px;
             object-fit: contain;
             display: flex;
-
-            &_active {
-                display: none;
-                width: 38px;
-                height: 28px;
-                object-fit: contain;
-            }
+            border-radius: 4px;
+            background: #282725;
+            padding: 11px;
+            margin-left: 5px;
         }
 
-        &_title {
-            display: flex;
-            align-items: center;
-            gap: 30px;
-        }
-
-        &_num {
-            font-size: 20px;
-            color: $text-white;
-        }
-
-        &_text {
-            font-size: 20px;
-            color: $text-dark;
-        }
     }
 
     &__content {
-        padding: 0 25px;
+        padding: 0 10px;
         max-height: 0;
         overflow: hidden;
         will-change: max-height;
         transition: all 0.25s ease-out;
         opacity: 0;
-        border-top: 1px solid #51443B;
         display: flex;
         flex-direction: column;
         gap: 30px;
     }
 
     &__active {
-        .accordion__intro {
-            border-bottom: 1px solid #1E1C18;
-
-            &:hover {
-                border-color: transparent;
-                border-bottom: 1px solid #1E1C18;
-            }
+        &:hover {
+            border: 1px solid #34312D;
         }
 
         .accordion__intro_icon {
-            display: none;
-        }
+            transform: rotateX(180deg);
 
-        .accordion__intro_icon_active {
-            display: flex;
-            filter: brightness(0) saturate(100%) invert(46%) sepia(78%) saturate(646%) hue-rotate(329deg) brightness(102%) contrast(100%);
+            path {
+                fill: $orange;
+            }
         }
 
         .accordion__content {
-            padding: 20px 25px;
+            padding: 20px 10px;
             opacity: 1;
         }
     }
+
+
 }
 
 .copy-block {
@@ -435,8 +414,6 @@
         }
     }
 }
-
-
 
 .catalog {
     &__tabs {
@@ -1373,8 +1350,6 @@
     }
 }
 
-
-
 .price-universal {
     display: flex;
     flex-direction: column;
@@ -1769,6 +1744,9 @@
         border: 1px solid transparent;
         transition: 300ms ease;
         z-index: 11;
+        display: flex;
+        align-items: center;
+        gap: 15px;
 
         &:hover {
             color: white;
