--- a/src/assets/scss/pages/_steam.scss
+++ b/src/assets/scss/pages/_steam.scss
@@ -596,6 +596,7 @@
             left: 20px;
             top: 50%;
             transform: translateY(-50%);
+            z-index: 11;
         }
 
         &_subtitle {
