--- a/src/partials/main-header.html
+++ b/src/partials/main-header.html
@@ -244,7 +244,7 @@
                             </span>
                             <span class="header__actions_admin_link">Мои тикеты</span>
                         </a>
-                        <button class="header__actions_admin_item header__actions_admin_item_exit">
+                        <button class="header__actions_admin_item header__actions_admin_item_exit" data-modal-target="#login">
                             <span class="header__actions_admin_svg">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 17 17" fill="none">
                                     <g clip-path="url(#clip0_521_24146)">
