--- a/src/assets/scss/_classes.scss
+++ b/src/assets/scss/_classes.scss
@@ -1892,16 +1892,50 @@
             transform: rotate(180deg);
         }
     }
+}
 
+.close-button {
+    border-radius: 5px;
+    background: #2E2D2B;
+    width: 30px;
+    height: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid transparent;
+    transition: 300ms ease;
 
+    &:hover {
+        border: 1px solid $orange;
 
-    /* .select-trigger::after {
-        content: '>';
-        margin-left: 10px;
-        transition: transform 0.3s;
+        svg path {
+            fill: $orange;
+        }
     }
+}
 
-    .select-trigger.open::after {
-        transform: rotate(180deg);
-    } */
+.main-modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 10;
+    background: rgba(16, 15, 14, 0.78);
+    backdrop-filter: blur(24.850000381469727px);
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    flex-direction: column;
+    gap: 15px;
+    padding: 50px 15px 50px;
+    overflow-y: auto;
+    transition: 200ms ease;
+    opacity: 0;
+    visibility: hidden;
+
+    &.active {
+        opacity: 1;
+        visibility: visible;
+    }
 }
