--- a/src/assets/scss/pages/_basket.scss
+++ b/src/assets/scss/pages/_basket.scss
@@ -775,23 +775,6 @@
 }
 
 .basket-steps {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 9;
-    background: rgba(16, 15, 14, 0.78);
-    backdrop-filter: blur(24.850000381469727px);
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    flex-direction: column;
-    gap: 15px;
-    padding: 150px 15px 150px;
-    overflow-y: auto;
-
-    &__bg {}
 
     &__content {
         width: 100%;
@@ -799,6 +782,7 @@
         border-radius: 10px;
         border: 1px solid #2F2D2B;
         background: #1A1917;
+        box-shadow: 0px 4px 20.8px 0px rgba(0, 0, 0, 0.60);
     }
 
     &__header {
@@ -843,15 +827,7 @@
         }
     }
 
-    &__close {
-        border-radius: 5px;
-        background: #2E2D2B;
-        width: 30px;
-        height: 30px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
+    &__close {}
 
     &__cards {
         display: grid;
