--- a/src/assets/scss/_classes.scss
+++ b/src/assets/scss/_classes.scss
@@ -1914,6 +1914,262 @@
     }
 }
 
+.main-login {
+
+    &__content {
+        width: 100%;
+        max-width: 820px;
+        display: flex;
+        flex-direction: column;
+        gap: 5px;
+    }
+
+    &__form {
+        border-radius: 10px;
+        border: 1px solid #FF6C3D;
+        background: #1A1917;
+        box-shadow: 0px 4px 20.8px 0px rgba(0, 0, 0, 0.60);
+        padding: 80px 20px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        position: relative;
+
+        &_block {
+            width: 100%;
+            max-width: 610px;
+        }
+
+        @include mobile {
+            padding: 60px 12px 40px;
+        }
+    }
+
+    &__btns {
+        display: grid;
+        align-items: center;
+        grid-template-columns: 1fr 1fr;
+        gap: 30px 10px;
+        margin-top: 10px;
+
+        @include mobile {
+            grid-template-columns: 1fr;
+            gap: 10px;
+        }
+    }
+
+    &__close {
+        position: absolute;
+        top: 20px;
+        right: 20px;
+
+        @include mobile {
+            top: 12px;
+            right: 12px;
+        }
+    }
+
+    &__login {
+        border-radius: 3px;
+        border: 1.258px solid #33302D;
+        background: linear-gradient(142deg, #342D27 0%, #222220 67.95%);
+        width: 100%;
+        padding: 10px;
+        color: $text-dark;
+        transition: 300ms ease;
+
+        &:hover {
+            border-color: $orange;
+            color: white;
+        }
+    }
+
+    &__social {
+        border-radius: 50px;
+        background: #262421;
+        padding: 7px 10px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 18px;
+        border: 1px solid transparent;
+
+        &_img {
+            width: 36px;
+            height: 36px;
+            display: flex;
+        }
+
+        &:hover {
+            border: 1px solid $orange;
+            color: white;
+        }
+    }
+
+    &__title {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        gap: 10px;
+        font-size: 24px;
+        font-weight: 700;
+        line-height: 1;
+        margin-bottom: 42px;
+    }
+
+    &__input {
+        margin-bottom: 10px;
+        position: relative;
+
+        ._input {
+            padding: 15px 20px;
+            line-height: 1;
+            border-radius: 6px;
+            border: 1px solid #34312D;
+            background: #1C1B19;
+
+            &:hover {
+                border-color: $orange;
+            }
+        }
+
+        ._forget {
+            border-radius: 4px;
+            background: #282725;
+            padding: 9px 20px;
+            font-size: 12px;
+            color: $text-dark;
+            position: absolute;
+            right: 10px;
+            top: 50%;
+            transform: translateY(-50%);
+            line-height: 1;
+        }
+    }
+
+    &__noaccount {
+        display: flex;
+        align-items: flex-end;
+        flex-direction: column;
+        line-height: 1.1;
+
+        @include mobile {
+            align-items: center;
+            text-align: center;
+            margin-top: 10px;
+            margin-bottom: 10px;
+        }
+
+        &_title {
+            color: $text-dark;
+            font-size: 14px;
+        }
+
+        &_link {
+            font-size: 16px;
+            font-weight: 500;
+            color: $orange;
+            border-bottom: 1px solid;
+        }
+    }
+
+    &__promo {
+        border-radius: 10px;
+        border: 1px solid #FF6C3D;
+        background: linear-gradient(0deg, rgba(29, 27, 25, 0.96) 0%, rgba(29, 27, 25, 0.96) 100%), url(<path-to-image>) lightgray 50% / cover no-repeat;
+        box-shadow: 0px 4px 28.9px 0px #000;
+        backdrop-filter: blur(33.650001525878906px);
+        padding: 30px 55px;
+        padding-right: 70px;
+        display: grid;
+        align-items: center;
+        grid-template-columns: 1fr 1fr;
+        position: relative;
+
+        @include mobile {
+            grid-template-columns: max-content;
+            justify-content: center;
+            gap: 40px;
+            padding: 20px;
+        }
+
+        &_content {
+            display: flex;
+            flex-direction: column;
+            gap: 8px;
+            line-height: 1;
+
+            @include mobile {
+                text-align: center;
+            }
+        }
+
+        &_title {
+            font-size: 24px;
+            font-weight: 700;
+            color: white;
+        }
+
+        &_subtitle {
+            font-size: 14px;
+            font-weight: 500;
+            color: $text-dark;
+
+            ._orange {
+                color: $orange;
+            }
+        }
+
+        &_copy {
+            border-radius: 115.5px;
+            background: $orange;
+            box-shadow: 0px 0px 69.1px -17px $orange;
+            font-size: 32px;
+            padding: 14px 40px;
+            line-height: 1;
+            font-weight: 700;
+            text-transform: uppercase;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: white;
+            gap: 30px;
+            position: relative;
+
+            &_bg {
+                position: absolute;
+                width: auto;
+                height: 150px;
+
+                @include mobile {
+                    height: 120px;
+                }
+            }
+
+            @include mobile {
+                width: auto;
+                padding: 14px 20px;
+                font-size: 24px;
+            }
+        }
+
+        &_svg {
+            position: absolute;
+
+            &._svg-1 {
+                left: 24px;
+                top: -20px;
+            }
+
+            &._svg-2 {
+                right: 24px;
+                top: -20px;
+            }
+        }
+    }
+}
+
 .main-modal {
     position: fixed;
     top: 0;
