--- a/src/assets/scss/pages/_steam-gifts.scss
+++ b/src/assets/scss/pages/_steam-gifts.scss
@@ -101,7 +101,17 @@
 
         @include netbook {
             width: 100%;
-            height: 120px;
+            height: 210px;
+
+            .swiper-wrapper {
+                display: grid;
+                grid-template-columns: 1fr 1fr;
+                gap: 10px;
+            }
+
+            .swiper-slide {
+                width: 100% !important;
+            }
         }
 
         @include mobile {
@@ -116,7 +126,6 @@
             position: relative;
             transition: 300ms ease;
 
-
             &:hover {
                 border-color: $orange;
                 cursor: pointer;
@@ -124,7 +133,6 @@
 
             &_bg {
                 display: flex;
-
 
                 &_item {
                     position: absolute;
@@ -143,7 +151,19 @@
                     background: rgba(22, 21, 19, 0.79);
                     backdrop-filter: blur(2.8499999046325684px);
                     position: absolute;
+
+                    &::after {
+                        content: "";
+                        position: absolute;
+                        z-index: 1;
+                        width: 0;
+                        height: 100%;
+                        background-color: #000000;
+                        transition: width 0s;
+                    }
                 }
+
+
             }
 
             &_content {
@@ -204,6 +224,13 @@
             .steam-gifts-bottom__slide {
                 border-color: $orange;
             }
+
+            .steam-gifts-bottom__slide_bg_over::after {
+                transition: width 5s ease-in-out;
+                width: 100%;
+            }
+
+
         }
     }
 }
