--- a/src/assets/scss/pages/_admin.scss
+++ b/src/assets/scss/pages/_admin.scss
@@ -732,6 +732,7 @@
     overflow: hidden;
 
     &__block {
+        position: relative;
         padding: 0 50px;
         display: grid;
         gap: 10px;
@@ -742,6 +743,47 @@
 
         @include laptop {
             padding: 0 10px;
+        }
+
+        @include mobile {
+            visibility: hidden;
+            opacity: 0;
+            bottom: -100vh;
+            position: fixed;
+            z-index: 10;
+            transition: 300ms ease;
+            left: 0;
+            width: 100%;
+            max-height: 50vh;
+            height: auto;
+            padding: 20px 15px 40px;
+            background-color: #161513;
+            grid-template-columns: 1fr;
+            border-radius: 10px 10px 0 0;
+            overflow-y: auto;
+            border-top: 1px solid $orange;
+
+
+
+            &._active {
+                display: grid;
+                bottom: -10px;
+                visibility: visible;
+                opacity: 1;
+
+                &::after {
+                    content: "";
+                    width: 100%;
+                    height: 100%;
+                    background-color: #00000080;
+                    backdrop-filter: blur(2px);
+                    position: fixed;
+                    left: 0;
+                    top: 0;
+                    z-index: -1;
+                }
+            }
+
         }
     }
 
@@ -776,6 +818,30 @@
             svg path {
                 fill: $orange;
             }
+        }
+    }
+
+    &__mobile {
+        display: grid;
+        align-items: center;
+        grid-template-columns: 1fr 50px;
+        justify-content: center;
+
+        position: relative;
+        padding: 0 10px;
+        gap: 10px;
+        border-radius: 10px;
+        border-bottom: 1px solid #2C2C2A;
+        background: #161513;
+    }
+
+    &-open {
+        display: none;
+
+        @include mobile {
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
     }
 }
