--- a/src/assets/scss/pages/_steam-gifts.scss
+++ b/src/assets/scss/pages/_steam-gifts.scss
@@ -236,11 +236,8 @@
 }
 
 .steam-gifts-series {
-    padding: 40px 0;
-
-    @include mobile {
-        padding: 20px 0;
-    }
+    padding-top: 20px;
+    padding-bottom: 20px;
 
     &__block {
         display: grid;
