--- a/src/assets/scss/pages/_steam.scss
+++ b/src/assets/scss/pages/_steam.scss
@@ -956,3 +956,21 @@
         }
     }
 }
+
+.faq-steam {
+    &__content {
+        width: 100%;
+        max-width: 830px;
+        border-radius: 10px;
+        border: 1px solid #2F2D2B;
+        background: #1A1917;
+        box-shadow: 0px 4px 20.8px 0px rgba(0, 0, 0, 0.60);
+    }
+
+    &__header {
+        display: flex;
+        justify-content: space-between;
+        gap: 10px;
+        padding: 18px 24px;
+    }
+}
