--- a/src/assets/scss/_classes.scss
+++ b/src/assets/scss/_classes.scss
@@ -2202,3 +2202,29 @@
         visibility: visible;
     }
 }
+
+.review-item {
+    display: flex;
+    gap: 13px;
+    border-radius: 10px;
+    background: #D9D9D9;
+    padding: 11px 18px;
+
+    &__icon {
+        width: auto;
+        height: 18px;
+        display: flex;
+        align-items: center;
+    }
+
+    &__content {
+        color: $text-dark;
+        font-size: 12px;
+    }
+
+    &__date {
+        margin-bottom: 9px;
+    }
+
+    &__text {}
+}
